--- a/soluciones__estrategicas/views/custom_views.xml
+++ b/soluciones__estrategicas/views/custom_views.xml
@@ -32,13 +32,13 @@
                     <field name="interes" attrs="{'invisible': [('is_company', '=', True)]}"/>
                 </xpath>
                 <xpath expr="//field[@name='category_id']" position="after">
-                    <field name="codigo_anterior" attrs="{'invisible': [('is_company', '=', True)]}"/>
+                    <field name="codigo_anterior"/>
                 </xpath>
                 <group>
-                    <group string="Registros" attrs="{'invisible': [('is_company', '=', True)]}">
-                        <field name="dui"/>
-                        <field name="fechadeexpediciondui"/>
-                        <field name="fechadeexpiraciondui"/>
+                    <group string="Registros">
+                        <field name="dui" attrs="{'invisible': [('is_company', '=', True)]}"/>
+                        <field name="fechadeexpediciondui" attrs="{'invisible': [('is_company', '=', True)]}"/>
+                        <field name="fechadeexpiraciondui" attrs="{'invisible': [('is_company', '=', True)]}"/>
                         <field name="nit"/>
                         <field name="nrc"/>
                         <field name="giro"/>
