--- a/soluciones__estrategicas/views/custom_views.xml
+++ b/soluciones__estrategicas/views/custom_views.xml
@@ -33,6 +33,7 @@
                     <field name="fechadenacimiento" attrs="{'invisible': [('is_company', '=', True)]}"/>
                     <field name="edad" attrs="{'invisible': [('is_company', '=', True)]}"/>
                     <field name="interes" attrs="{'invisible': [('is_company', '=', True)]}"/>
+                    <field name="diasdegraciacredito" attrs="{'invisible': [('is_company', '=', True)]}" options="{'type': 'number', 'step': 1}"/>
                 </xpath>
                 <xpath expr="//field[@name='category_id']" position="after">
                     <field name="codigo_anterior"/>
@@ -243,6 +244,7 @@
                                 
                                     <field name="fechaInicio"/>
                                     
+                                    
                                     <field name="fechaestatus"/>
                                     <field name="estatus"/>
                                     
@@ -257,6 +259,7 @@
                                             <field name="cuotanumero"/>
                                             <field name="cuotafecha"/>
                                             <field name="cuotafechapagada"/>
+                                            <field name="cuotafechalimite"/>
                                             <field name="cuotasaldoinicial" widget="monetary"/>
                                             <field name="cuotamonto" widget="monetary"/>
                                             <field name="cuotasaldofinal" widget="monetary"/>
